css: prevent images from overflowing containers
Without this, adding images to articles
would overflow the 80 character container.

--- a/css/matheusmoreira.css
+++ b/css/matheusmoreira.css
@@ -108,3 +108,8 @@ aside p:first-child {
 aside p:last-child {
   margin-bottom: 0;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
